# Grants

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  docker-compose.yml  origin  package-lock.json  package.json
.github/workflows/: ci.yml  daily-grant-scrape.yml  secret-scan.yml
data/: Company_DNA.md  Company_Profile.md  Voice_DNA.md  brand_config.json
data/examples/: proposal_content.json
python/: README.md  pyproject.toml
python/src/grant_os/: __init__.py  anthropic_draft.py  cli.py  compliance_matrix.py  langgraph_pipeline.py  llamaparse_ingest.py  llm_config.py  llm_json.py  pdf_branded.py  pdf_queue.py  redaction.py  remediation_writer.py  scrape_firecrawl.py  supabase_ingest.py  usaspending.py
python/src/grant_os/models/: __init__.py  compliance.py  grants.py
scripts/: scan-secrets.sh
supabase/migrations/: 20260406000000_grant_os_core.sql  20260406150000_grant_os_pgvector_embeddings.sql  20260406200000_grant_os_embedding_chunks.sql  20260406210000_document_analyzer_storage.sql  20260406220000_match_analyzer_chunks_citations.sql
web/: next.config.ts  package-lock.json  package.json
web/app/: AppNav.tsx  layout.tsx  page.tsx
web/app/actions/: semanticSearch.ts
web/app/login/: page.tsx
web/lib/: chunkText.ts  extractPdfText.ts  grantOsEmbeddings.ts  internalRouteAuth.ts  pdfPipeline.ts  rateLimit.ts  runSemanticSearch.ts  summarizeGrantRequirements.ts
web/lib/documentAnalyzer/: letterheadContext.ts  llamaSources.ts  persistToSupabase.ts  ragFromSupabase.ts  (+1 more)
web/types/: documentAnalyzer.ts  semanticSearch.ts
(+13 files in other folders)
